Fixed the issue with a visible DB password

--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,8 @@ body {
 }
 .splash {
   background-color: #006989;
+  height: 100%;
+  width: 100%;
 }
 .menu-bar {
   position: fixed;
@@ -191,3 +193,8 @@ textarea {
   resize: vertical;
   font-family: "Merriweather";
 }
+.search-result {
+	background-image: url("../images/bookshelf.jpg");
+	background-attachment: fixed;
+	width: 100%;
+	height: 100%;
